--- a/www/index.html
+++ b/www/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <script src="js/jquery-3.4.1.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>Document</title>
 </head>
 <body class="bodys"> 
     <div class="container-fluid" align="center">
+	<br><br><br><br><br><p>Hecho por Fernanda Castillo y Miriam Venegas</p><br><br><br>
             <button type="button" class="btn btn-info" data-toggle="modal" data-target="#exampleModal">
                 Calcular area de figuras
             </button>
@@ -23,7 +23,7 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
                 </div>
-                <div class="modal-body">
+                <div class="modal-body" style="background-color:pink">
                     <table>
                         <tr align="center">
                             <td width="30%">
@@ -82,11 +82,19 @@
                                 </div>
                                 <br>
                         </div>
-                        </div>
                         <div class="collapse" id="collapsecuadrado">
                             <div class="card card-body" align="center">
                                 <img src="https://decagono.com/img/cuadrado.png" alt="" width="30%">
                             </div>
+								
+								  <script>
+									function scuarterarea(){
+									  var RecLen, Area;
+									  RecLen = document.getElementById("rec_len2").value;
+									  Area = RecLen * RecLen;
+									  document.getElementById('c').value = Area;
+									}
+								  </script>
                                     <div class="container">
                                             <br />
                                               <h2>Cuadrado</h2>
@@ -100,20 +108,20 @@
                                               <input type="text" class="form-control req" id="c" readonly >
                                             </div>
                                             <button type="submit" class="btn btn-default" onclick="scuarterarea()">Submit</button>
-                                          </div>
-                                          <script>
-                                            function scuarterarea(){
-                                              var RecLen, Area;
-                                              RecLen = document.getElementById("rec_len2").value;
-                                              Area = RecLen * RecLen;
-                                              document.getElementById('c').value = Area;
-                                            }
-                                          </script>
-                        </div>
+                                    </div>
+										  </div>
                         <div class="collapse" id="collapsecilindro">
                             <div class="card card-body" align="center">
                                 <img src="https://decagono.com/img/circulo.png" alt="" width="20%">
                             </div>
+							        <script>
+                                    function carea(){
+                                      var RecLen, Area;
+                                      RecLen = document.getElementById("rec_len3").value;
+                                      Area = 3.1416 * (RecLen*RecLen);
+                                      document.getElementById('z').value = Area;
+                                    }
+                                  </script>
                             <div class="container">
                                     <br />
                                       <h2>Círculo</h2>
@@ -128,16 +136,8 @@
                                     </div>
                                     <button type="submit" class="btn btn-default" onclick="carea()">Submit</button>
                                   </div>
-                                  <script>
-                                    function carea(){
-                                      var RecLen, Area;
-                                      RecLen = document.getElementById("rec_len3").value;
-                                      Area = 3.1416 * (RecLen*RecLen);
-                                      document.getElementById('z').value = Area;
-                                    }
-                                  </script>
                         </div>
-                        
+                       </div> 
                 <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                 </div>
@@ -146,7 +146,10 @@
         </div>
         <br>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
+	</div>
+	
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
